-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10.0
-
None
-
-
ed5a70f51 (6.10.0), 8a7973f6f (dev), eac50a9cc (6.10)
MacOS 15.4.1
Qt Creator 16.0.2
Qt 6.10.0 (dev snapshot)
Device: Pixel 5 13.0
Steps to reproduce:
- Make sure the Material UI is selected as the main style.
- Run quickcontrols gallery example
- Open Dial or Slider page
- Drag and move the handle.
Expected: The highlight should be a circle as it was on 6.9.1.
Actual: The highlight of the handle is a square, not a circle, as it used to be. See video to check the difference between 6.9.1 and 6.10.0.
Reproducibility: 100%
- relates to
-
QTQAINFRA-7176
Qt Test Attack - 05, 2025
-
- Open
-
| For Gerrit Dashboard: QTBUG-136958 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 666681,8 | Material: don't set individual radii properties on rectangle SG node | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 680638,3 | Material: don't set individual radii properties on rectangle SG node | 6.10.0 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 681081,2 | Material: don't set individual radii properties on rectangle SG node | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |