Material: don't set individual radii properties on rectangle SG node

As of 727d2350391512cb8449f9db781b4e1041a8068c this isn't necessary and
turns our lovely circle into a square.

Fixes: QTBUG-136958
Pick-to: 6.10
Change-Id: I96d3d8e3e2061a3a2b387bf8e35a9bcc9fd3e9ed
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>